ACAD-703 fixed Shibboleth config on oipp-test

--- a/modules/rsmart-oipp-test-config/templates/shibboleth2.xml.erb
+++ b/modules/rsmart-oipp-test-config/templates/shibboleth2.xml.erb
@@ -13,7 +13,7 @@ https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPConfiguration
     clockSkew="1800">
 
     <!-- The entityID is the name TestShib made for your SP. -->
-    <ApplicationDefaults entityID="https://cole.uconline.edu/shibboleth-sp"
+    <ApplicationDefaults entityID="https://oipp-test.academic.rsmart.com/shibboleth-sp"
         REMOTE_USER="eppn">
 
         <!-- You should use secure cookies if at all possible.  See cookieProps in this Wiki article. -->
@@ -39,7 +39,7 @@ https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPConfiguration
             <!--
                 Handlers allow you to interact with the SP and gather more information.  Try them out!
                 Attribute values received by the SP through SAML will be visible at:
-                https://cole.uconline.edu/Shibboleth.sso/Session
+                https://oipp-test.academic.rsmart.com/Shibboleth.sso/Session
             -->
 
             <!-- Extension service that generates "approximate" metadata based on SP configuration. -->
