--- a/templates/server.xml.erb
+++ b/templates/server.xml.erb
@@ -19,7 +19,7 @@
      define subcomponents such as "Valves" at this level.
      Documentation at /docs/config/server.html
  -->
-<Server port="8005" shutdown="SHUTDOWN">
+<Server port="8005" shutdown="<%= scope.lookupvar('tomcat6::shutdown_password') %>">
 
   <!--APR library loader. Documentation at /docs/apr.html -->
   <Listener className="org.apache.catalina.core.AprLifecycleListener" SSLEngine="on" />
@@ -52,7 +52,7 @@
                redirectPort="8443"
                maxHttpHeaderSize="131136"  /> 
 
-    <Engine name="Catalina" defaultHost="localhost">
+    <Engine name="Catalina" defaultHost="localhost" jvmRoute="<%= scope.lookupvar('jvm_route') %>">
       <Realm className="org.apache.catalina.realm.UserDatabaseRealm"
              resourceName="UserDatabase"/>
       <Host name="localhost"  appBase="webapps"
