--- a/modules/rsmart-oipp-test-config/templates/cle-server.xml.erb
+++ b/modules/rsmart-oipp-test-config/templates/cle-server.xml.erb
@@ -1,33 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Licensed to the Apache Software Foundation (ASF) under one or more
-  contributor license agreements.  See the NOTICE file distributed with
-  this work for additional information regarding copyright ownership.
-  The ASF licenses this file to You under the Apache License, Version 2.0
-  (the "License"); you may not use this file except in compliance with
-  the License.  You may obtain a copy of the License at
 
-      http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
-<!-- Example Server Configuration File -->
-<!-- Note that component elements are nested corresponding to their
-     parent-child relationships with each other -->
-
-<!-- A "Server" is a singleton element that represents the entire JVM,
-     which may contain one or more "Service" instances.  The Server
-     listens for a shutdown command on the indicated port.
-
-     Note:  A "Server" is not itself a "Container", so you may not
-     define subcomponents such as "Valves" or "Loggers" at this level.
- -->
-
-<Server port="8005" shutdown="SHUTDOWN">
+<Server port="8005" shutdown="<%= scope.lookupvar('tomcat6::shutdown_password') %>">
 
   <!-- Comment these entries out to disable JMX MBeans support used for the 
        administration web application -->
@@ -39,9 +12,6 @@
   <!-- Global JNDI resources -->
   <GlobalNamingResources>
 
-    <!-- Test entry for demonstration purposes -->
-    <Environment name="simpleValue" type="java.lang.Integer" value="30"/>
-
     <!-- Editable user database that can also be used by
          UserDatabaseRealm to authenticate users -->
     <Resource name="UserDatabase" auth="Container"
@@ -52,72 +22,35 @@
 
   </GlobalNamingResources>
 
-  <!-- A "Service" is a collection of one or more "Connectors" that share
-       a single "Container" (and therefore the web applications visible
-       within that Container).  Normally, that Container is an "Engine",
-       but this is not required.
-
-       Note:  A "Service" is not itself a "Container", so you may not
-       define subcomponents such as "Valves" or "Loggers" at this level.
-   -->
-
   <!-- Define the Tomcat Stand-Alone Service -->
   <Service name="Catalina">
 
-    <!-- Define a non-SSL HTTP/1.1 Connector on port 8080 -->
-    <!-- Connector port="8080" maxHttpHeaderSize="8192"
-               maxThreads="150" minSpareThreads="25" maxSpareThreads="75"
-               enableLookups="false" redirectPort="8443" acceptCount="100"
-               connectionTimeout="20000" disableUploadTimeout="true" -->
-    <!-- Note : To disable connection timeouts, set connectionTimeout value
-     to 0 -->
-	
-	<!-- Note : To use gzip compression you could set the following properties :
-	
-			   compression="on" 
-			   compressionMinSize="2048" 
-			   noCompressionUserAgents="gozilla, traviata" 
-			   compressableMimeType="text/html,text/xml"
-	-->
-
-    <!-- Define a SSL HTTP/1.1 Connector on port 8443 -->
-    <!--
-    <Connector port="8443" maxHttpHeaderSize="8192"
-               maxThreads="150" minSpareThreads="25" maxSpareThreads="75"
-               enableLookups="false" disableUploadTimeout="true"
-               acceptCount="100" scheme="https" secure="true"
-               clientAuth="false" sslProtocol="TLS" />
-    -->
+    <!-- Define a non-SSL HTTP/1.1 Connector on port 8880 -->
+    <Connector port="8880" maxHttpHeaderSize="8192" URIEncoding="UTF-8"
+               maxThreads="75" minSpareThreads="2" maxSpareThreads="5"
+               enableLookups="false" redirectPort="8443" acceptCount="20"
+               connectionTimeout="20000" disableUploadTimeout="true" />
 
     <!-- Define an AJP 1.3 Connector on port 8009 -->
-    <Connector port="8009" 
+    <!-- for shibb: add tomcatAuthentication="false" -->
+    <Connector port="8009" URIEncoding="UTF-8" tomcatAuthentication="false"
+               maxThreads="750" maxSpareThreads="100" minSpareThreads="25" backlog="200"
                enableLookups="false" redirectPort="8443" protocol="AJP/1.3" />
-         
+
     <!-- Define the top level container in our container hierarchy -->
-    <Engine name="Catalina" defaultHost="localhost">
+    <Engine name="Catalina" defaultHost="localhost" jvmRoute="<%= jvm_route %>">
 
-    
       <!-- Because this Realm is here, an instance will be shared globally -->
-
-      <!-- This Realm uses the UserDatabase configured in the global JNDI
-           resources under the key "UserDatabase".  Any edits
-           that are performed against this UserDatabase are immediately
-           available for use by the Realm.  -->
       <Realm className="org.apache.catalina.realm.UserDatabaseRealm"
-             resourceName="UserDatabase"/>
+        resourceName="UserDatabase"/>
 
-     
       <!-- Define the default virtual host
            Note: XML Schema validation will not work with Xerces 2.2.
        -->
-      <Host name="localhost" appBase="webapps"
-       unpackWARs="true" autoDeploy="true"
-       xmlValidation="false" xmlNamespaceAware="false">
-
+      <Host name="localhost" appBase="webapps" unpackWARs="true" autoDeploy="true"
+        xmlValidation="false" xmlNamespaceAware="false">
       </Host>
 
     </Engine>
-
   </Service>
-
 </Server>
