--- a/templates/sakaioae.sh.erb
+++ b/templates/sakaioae.sh.erb
@@ -40,25 +40,43 @@ debug() {
     echo "done.";
 }
 
-stop() {
-echo "Stopping SakaiOAE: "
-PROCESS=`ps auxwww | grep "^${SAKAIOAE_USER}" | perl -pe 's/^\S*\s*([0-9]+).*\n/\1 /'`
-if [ "${PROCESS}" != "" ] ; then
-  su -c "kill ${PROCESS}" ${SAKAIOAE_USER}
-  sleep 5;
-  PROCESS=`ps auxwww | grep "^${SAKAIOAE_USER}" | perl -pe 's/^\S*\s*([0-9]+).*\n/\1 /'`
-  if [ "${PROCESS}" != "" ] ; then
-    su -c "kill -9 ${PROCESS}" ${SAKAIOAE_USER}
-    sleep 5;
-    PROCESS=`ps auxwww | grep "^${SAKAIOAE_USER}" | perl -pe 's/^\S*\s*([0-9]+).*\n/\1 /'`
-    if [ "${PROCESS}" != "" ] ; then
-      echo "failed.";
-      exit 1;
+function killoae() {
+  MAX_TRIES=3
+  TRIES=1
+  PID=$1
+  while [[ $TRIES < $MAX_TRIES ]]; do
+    if [[ -d /proc/$1 ]]; then
+      su --login --command "kill ${PID}" ${SAKAIOAE_USER}
+      sleep 5
     fi
+    TRIES=$[TRIES+1]
+  done
+
+  if [[ -d /proc/${PID} ]]; then
+    kill -9 ${PID}
   fi
-fi
-rm -f ${INIT_PID};
-echo "done.";
+}
+
+stop() {
+  echo "Stopping SakaiOAE: "
+
+  # Use the pid file if it exists.
+  if [[ -f ${INIT_PID} ]]; then
+    PID=`cat ${INIT_PID}`
+    killoae $PID
+    rm -f ${INIT_PID}
+  else
+    # All the procs for the oae user
+    PIDS=`ps -u ${SAKAIOAE_USER} | grep -v PID | awk '{ print $1 }'`
+    for PID in $PIDS; do
+      # Check if sakaioae.jar was in the command line arguments
+      grep sakaioae.jar /proc/$PID/cmdline
+      if [[ $? -eq 0 ]]; then
+        killoae $PID
+      fi
+    done
+  fi
+  echo 'done'
 }
 
 restart() {
