NOJIRA - Fix scope lookup.

--- a/modules/sis/templates/run_sis_batch.sh.erb
+++ b/modules/sis/templates/run_sis_batch.sh.erb
@@ -7,6 +7,6 @@
 # Erik Froese <erik@hallwaytech.com>
 #
 
-SIS_JAR=<%= scope.lookupvar('sis::oipp::artifact') %>
+SIS_JAR=<%= scope.lookupvar('sis::batch::artifact') %>
 
 java -jar $SIS_JAR
