NOJIRA - More configurableness.

--- a/modules/sis/templates/run_sis_batch.sh.erb
+++ b/modules/sis/templates/run_sis_batch.sh.erb
@@ -8,5 +8,13 @@
 #
 
 SIS_JAR=<%= scope.lookupvar('sis::batch::artifact') %>
+SIS_BATCH_HOME=<%= scope.lookupvar('sis::batch::home') %>
+SIS_BATCH_CSV=${SIS_BATCH_HOME}/<%= scope.lookupvar('sis::batch::csv') %>
 
-java -jar $SIS_JAR
+JAVA_OPTS = " -Dfilename@com.rsmart.customer.integration.processor.cle.CleUserProcessor=${SIS_BATCH_CSV} "
+
+<% if scope.lookupvar('sis::batch::sis_properties') -%>
+JAVA_OPTS="${JAVA_OPTS} -Dsis.config.file=${SIS_BATCH_HOME}/sis.properties "
+<% end -%>
+
+java ${JAVA_OPTS} -jar $SIS_JAR
