--- a/modules/sis/templates/run_sis_batch.sh.erb
+++ b/modules/sis/templates/run_sis_batch.sh.erb
@@ -18,6 +18,6 @@ JAVA_OPTS=" ${JAVA_OPTS} -Doae.admin.password=<%= scope.lookupvar('sis::batch::o
 JAVA_OPTS="${JAVA_OPTS} -Dsis.config.file=${SIS_BATCH_HOME}/sis.properties "
 <% end -%>
 
-<% scope.lookup('sis::batch::csv_user_filename').each do |csv_file| %>
+<% scope.lookupvar('sis::batch::csv_user_filename').each do |csv_file| %>
 java ${JAVA_OPTS} " -Dfilename@com.rsmart.customer.integration.processor.cle.CleUserProcessor=<%= scope.lookupvar('sis::batch::csv_dir') %>/<%= csv_file %> " -jar $SIS_JAR
 <% end %>
